Fix HoverOpacityItem hover hitbox
Fixed a problem where the bottom part of the HoverOpacityItem would not work and only the top part (not overlapping with the DesktopGrid) would actually trigger the hover.

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -214,11 +214,12 @@ body,
   height: 50px;
   width: 100%;
   border: 1px solid black;
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 2rem;
   left: 0;
   background-color: transparent;
-  z-index: 0;
+  z-index: 10;
+  box-sizing: border-box;
 }
 .edit-icon-container {
   position: fixed;
